# PacMaN

./: .gitignore  README.md  configure.ac
include/: Assignment.hpp  Combinatorial.hpp  Tools.hpp  Wick.hpp
src/: Assignment.cpp  Combinatorial.cpp  Wick.cpp
